k8s/qa/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: qa
spec:
  selector:
    io.kompose.service: web
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
